Added basic movement and Levelobserver for the changing of the blocks

--- a/mingin-main/Minigin/Minigin.vcxproj.filters
+++ b/mingin-main/Minigin/Minigin.vcxproj.filters
@@ -186,8 +186,10 @@
     <ClCompile Include="Subject.cpp">
       <Filter>Minigin\Utilities</Filter>
     </ClCompile>
-    <ClCompile Include="Component.cpp" />
     <ClCompile Include="ScoreComponent.cpp">
+      <Filter>Minigin\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Component.cpp">
       <Filter>Minigin\Components</Filter>
     </ClCompile>
   </ItemGroup>
