--- a/mingin-main/QBert/QBert.vcxproj.filters
+++ b/mingin-main/QBert/QBert.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Header Files\Components">
       <UniqueIdentifier>{aabc7796-eb85-4ea9-b85f-58bf12d193ff}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Observers">
+      <UniqueIdentifier>{bdb8c205-09b3-4768-96e4-ed420fbdff89}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="QBert.cpp">
@@ -31,6 +34,12 @@
       <Filter>Header Files\Components</Filter>
     </ClCompile>
     <ClCompile Include="Pyramid.cpp">
+      <Filter>Header Files\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="LevelObserver.cpp">
+      <Filter>Header Files\Observers</Filter>
+    </ClCompile>
+    <ClCompile Include="QBertCommands.cpp">
       <Filter>Header Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -42,7 +51,13 @@
       <Filter>Header Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="Pyramid.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="QBertCommands.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LevelObserver.h">
+      <Filter>Header Files\Observers</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
