Reworked main file, added different levels after completing, added gameobserver responsible for level win/change etc...
Added init to gameobjects as components with reason being that object is created but not initialized so that the object does not need to be created later on.
Init function is not pure virtual because not all components need to be initialized

--- a/mingin-main/QBert/QBert.vcxproj
+++ b/mingin-main/QBert/QBert.vcxproj
@@ -158,18 +158,22 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Cube.cpp" />
+    <ClCompile Include="GameObserver.cpp" />
     <ClCompile Include="LevelObserver.cpp" />
     <ClCompile Include="Pyramid.cpp" />
     <ClCompile Include="QBert.cpp" />
     <ClCompile Include="QBertCharacter.cpp" />
     <ClCompile Include="QBertCommands.cpp" />
+    <ClCompile Include="SlickSlam.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cube.h" />
+    <ClInclude Include="GameObserver.h" />
     <ClInclude Include="LevelObserver.h" />
     <ClInclude Include="Pyramid.h" />
     <ClInclude Include="QBertCharacter.h" />
     <ClInclude Include="QBertCommands.h" />
+    <ClInclude Include="SlickSlam.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
