--- a/mingin-main/QBert/QBert.vcxproj.filters
+++ b/mingin-main/QBert/QBert.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="QBertCommands.cpp">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameObserver.cpp">
+      <Filter>Header Files\Observers</Filter>
+    </ClCompile>
+    <ClCompile Include="SlickSlam.cpp">
+      <Filter>Header Files\Characters</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="QBertCharacter.h">
@@ -58,6 +64,12 @@
     </ClInclude>
     <ClInclude Include="LevelObserver.h">
       <Filter>Header Files\Observers</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObserver.h">
+      <Filter>Header Files\Observers</Filter>
+    </ClInclude>
+    <ClInclude Include="SlickSlam.h">
+      <Filter>Header Files\Characters</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
