--- a/mingin-main/QBert/QBert.vcxproj
+++ b/mingin-main/QBert/QBert.vcxproj
@@ -160,20 +160,22 @@
     <ClCompile Include="Cube.cpp" />
     <ClCompile Include="GameObserver.cpp" />
     <ClCompile Include="LevelObserver.cpp" />
+    <ClCompile Include="Prototype.cpp" />
     <ClCompile Include="Pyramid.cpp" />
     <ClCompile Include="QBert.cpp" />
     <ClCompile Include="QBertCharacter.cpp" />
     <ClCompile Include="QBertCommands.cpp" />
-    <ClCompile Include="SlickSlam.cpp" />
+    <ClCompile Include="SlickSam.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cube.h" />
     <ClInclude Include="GameObserver.h" />
     <ClInclude Include="LevelObserver.h" />
+    <ClInclude Include="Prototype.h" />
     <ClInclude Include="Pyramid.h" />
     <ClInclude Include="QBertCharacter.h" />
     <ClInclude Include="QBertCommands.h" />
-    <ClInclude Include="SlickSlam.h" />
+    <ClInclude Include="SlickSam.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
