--- a/mingin-main/QBert/QBert.vcxproj
+++ b/mingin-main/QBert/QBert.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="QBertCharacter.cpp" />
     <ClCompile Include="QBertCommands.cpp" />
     <ClCompile Include="SlickSam.cpp" />
+    <ClCompile Include="UggWrongway.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cube.h" />
@@ -176,6 +177,7 @@
     <ClInclude Include="QBertCharacter.h" />
     <ClInclude Include="QBertCommands.h" />
     <ClInclude Include="SlickSam.h" />
+    <ClInclude Include="UggWrongway.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
