Fixed memory leaks on UggWrongway,
-Added transition between levels,
-added death on qbert
-refactored code
-prepared moveobserver for the animations
-fixed wrongway so that not both ugg and wrongway are deleted when one is destroyed.
-added freeze to the characters so on actordamaged

-m_gameobject.lock() needs to be relooked in general in overall code (todo)

--- a/mingin-main/QBert/QBert.vcxproj
+++ b/mingin-main/QBert/QBert.vcxproj
@@ -160,23 +160,27 @@
     <ClCompile Include="Cube.cpp" />
     <ClCompile Include="GameObserver.cpp" />
     <ClCompile Include="LevelObserver.cpp" />
+    <ClCompile Include="MoveObserver.cpp" />
     <ClCompile Include="Prototype.cpp" />
     <ClCompile Include="Pyramid.cpp" />
     <ClCompile Include="QBert.cpp" />
     <ClCompile Include="QBertCharacter.cpp" />
     <ClCompile Include="QBertCommands.cpp" />
     <ClCompile Include="SlickSam.cpp" />
+    <ClCompile Include="Transition.cpp" />
     <ClCompile Include="UggWrongway.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cube.h" />
     <ClInclude Include="GameObserver.h" />
     <ClInclude Include="LevelObserver.h" />
+    <ClInclude Include="MoveObserver.h" />
     <ClInclude Include="Prototype.h" />
     <ClInclude Include="Pyramid.h" />
     <ClInclude Include="QBertCharacter.h" />
     <ClInclude Include="QBertCommands.h" />
     <ClInclude Include="SlickSam.h" />
+    <ClInclude Include="Transition.h" />
     <ClInclude Include="UggWrongway.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
