Added skiplevelcommand to debug the error with slicksam in the scene, the scene freezes and creates memory leaks

--- a/mingin-main/QBert/QBert.vcxproj.filters
+++ b/mingin-main/QBert/QBert.vcxproj.filters
@@ -58,7 +58,7 @@
       <Filter>Header Files\Components</Filter>
     </ClCompile>
     <ClCompile Include="MoveObserver.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files\Observers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -93,7 +93,7 @@
       <Filter>Header Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="MoveObserver.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Observers</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
