--- a/mingin-main/Minigin/Minigin.vcxproj.filters
+++ b/mingin-main/Minigin/Minigin.vcxproj.filters
@@ -192,5 +192,8 @@
     <ClCompile Include="Component.cpp">
       <Filter>Minigin\Components</Filter>
     </ClCompile>
+    <ClCompile Include="ServiceLocator.cpp">
+      <Filter>Minigin\Utilities</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
